# yunma-ocr

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: main.rs
src/: account.rs  client.rs  dto.rs  error.rs  lib.rs
src/captchas/: click_captcha.rs  common_captcha.rs  google_captchas.rs  mod.rs  simple_captcha.rs  slide_captcha.rs  yunma_captcha_query_urls.rs
tests/: account_related.rs  parse_common_captcha.rs  parse_simple_captcha.rs  parse_slide_captcha.rs
tests/helper/: mod.rs  settings.rs
