[package]
name = "yunma_ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
lazy_static = "1.4.0"
dotenv = "0.15.0"
tokio = { version = "1.4.0", features = ["macros"] }
